# google-voice-takeout-parser

./: README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql-analysis.yml  codeql.yml  publish.yml  scorecards.yml
requirements/: publish.txt  test.txt
src/google_voice_takeout_parser/: __init__.py  google_voice_takeout_parser.py
src/google_voice_takeout_parser/scripts/: google_voice_parser.py
tests/: test_google-voice-takeout-parser.py  test_package.py  test_text_messages.py  test_voice.py
tests/test_data/: Call - Missed with name.html  Call - Missed with number.html  Call - Outgoing.html  Call - Received with name.html  Call - Received with number.html  Call - Recorded.html  Call - Voicemail, no name or number.html  Call - Voicemail.html  Text - Emoji embedded.html  Text - Group text names.html  Text - Group text numbers.html  Text - Incoming with newlines.html  Text - Incoming, no name, no response.html  Text - Name with images.html  Text - Outbound with name, no response.html  Text - Outbound with name, yes response.html  Text - Outgoing conversation.html  Text - contact embedded.html
