[build-system]
requires = ["hatchling>=1.6.0,<2"]
build-backend = "hatchling.build"

[project]
name = "google-voice-takeout-parser"
description = "Python package for parsing Google Voice takeout data."
authors = [
    {name = "Moshe Kaplan", email = "me@moshekaplan.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7,<4"
dynamic = ["version"]

dependencies = [
  "html5lib"
]

[project.urls]
Source = "https://github.com/moshekaplan/google-voice-takeout-parser"

[tool.hatch.version]
path = "src/google_voice_takeout_parser/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/LICENSE",
    "/CHANGELOG.md"
]

[tool.scriv]
version = "literal: src/google_voice_takeout_parser/_version.py: __version__"
fragment_directory = "newsfragments"
format = "md"
md_header_level = "2"
entry_title_template = "file: title_template.j2"
